# tda-mapper-python

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  mapper.py  mapper_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  general-issue.md
.github/workflows/: bench.yml  deploy-test.yml  deploy.yml  publish-pypi.yml  publish-test.yml  publish-testpypi.yml  publish.yml  test-bench.yml  test-unit.yml  test.yml
app/: 00_🏠_home.py  Dockerfile  app.py  common.py  nicegui_app.py  panel_app.py  requirements.txt  streamlit_app.py  tda_mapper_app.py
app/assets/: graph.js
app/pages/: 01_upload.py  01_📤_upload.py  02_mapper.py  02_🔮_mapper.py
benchmarks/: benchmark.py  benchmark_line.py  benchmark_pca.py  plot.py  requirements.txt
docs/: requirements.txt
docs/source/: apiref.rst  citations.rst  conf.py  examples.rst  index.rst  modules.rst  notebooks.rst  overview.rst  quickstart.rst  tdamapper.rst  tdamapper.utils.rst
docs/source/notebooks/: circles.py  circles_online.ipynb  circles_online.py  cover.py  digits.py  digits_online.ipynb  digits_online.py
examples/: benchmark.ipynb  example-notebook.ipynb  example.ipynb  example.py  example_notebook.ipynb
examples/.ipynb_checkpoints/: example-notebook-checkpoint.ipynb
notebooks/: benchmark.ipynb  example.ipynb
src/mapper/: clustering.py  core.py  cover.py  exact.py  graph.py  kpi.py  network.py  pipeline.py  plot.py  search.py  stats.py
src/mapper.egg-info/: PKG-INFO  SOURCES.txt
src/mapper/utils/: balltree.py  heap.py  quickselect.py  unionfind.py  vptree.py  vptree_flat.py
src/tdamapper/: __init__.py  _app.py  _common.py  _metrics.py  _plot_matplotlib.py  _plot_plotly.py  _plot_pyvis.py  _run_app.py  app.py  clustering.py  core.py  cover.py  estimator.py  heap.py  learn.py  metrics.py  neighbors.py  plot.py  plot_plotly.py  protocols.py  proximity.py  quickselect.py  search.py  unionfind.py  vptree.py
src/tdamapper/plot_backends/: common.py  plot_common.py  plot_matplotlib.py  plot_plotly.py  plot_pyvis.py
src/tdamapper/utils/: _metrics.py  _metrics.pyx  cover_tree.py  heap.py  metrics.py  quickselect.py  unionfind.py  vptree.py  vptree_alt.py  vptree_flat.py  vptree_hier.py  vptree_hierarchical.py  vptree_iter.py  vptree_numba.py  vptree_sklearn.py
src/tdamapper/utils/cython/: heap.pxd  heap.pyx  metrics.pyx  quickselect.pxd  quickselect.pyx  vptree_flat.pyx
src/tdamapper/utils/vptree_flat/: ball_search.py  builder.py  common.py  knn_search.py  vptree.py
src/tdamapper/utils/vptree_hier/: ball_search.py  builder.py  common.py  knn_search.py  vptree.py
src/tdamapper/vptree_flat/: ball_search.py  builder.py  common.py  knn_search.py  vptree.py
src/tdamapper/vptree_hier/: ball_search.py  builder.py  common.py  knn_search.py  vptree.py
src/tdamapper_rs/: __init__.py  lib.rs
src/tdamapper_rs/utils/: mod.rs  quickselect.rs  vptree.rs
tests/: ball_tree.py  example.py  setup_logging.py  test_balltree.py  test_bench_cover.py  test_bench_metrics.py  test_bench_vptree.py  test_benchmark.py  test_core.py  test_cover.py  test_cover_bench.py  test_heap.py  test_knn.py  test_landmarks.py  test_mapper.py  test_neighbors.py  test_plot.py  test_proximity.py  test_quickselect.py  test_readme.py  test_rs.py  test_search.py  test_sklearn.py  test_unionfind.py  test_unit_app.py  test_unit_core.py  test_unit_cover.py  test_unit_cover_tree.py  test_unit_heap.py  test_unit_knn.py  test_unit_learn.py  test_unit_metrics.py  test_unit_noise.py  test_unit_params.py  test_unit_plot.py  test_unit_proximity.py  test_unit_quickselect.py  test_unit_readme.py  test_unit_search.py  test_unit_sklearn.py  (+7 more)
tests/benchmark/: test_bench_cover.py  test_bench_vptree.py
tests/unit/: example.py  test_core.py  test_cover.py  test_knn.py  test_plot.py  test_proximity.py  test_quickselect.py  test_readme.py  test_sklearn.py  test_unionfind.py  test_vptree.py
