[package]
name = "tdamapper_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tdamapper_rs"
path = "src/tdamapper_rs/lib.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
fastrand = "1.9.0"
quickcheck = "1.0.3"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

