[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "tda-mapper"
version = "0.7.0"
description = "A simple and efficient Python implementation of Mapper algorithm for Topological Data Analysis"
readme = "README.md"
authors = [{ name = "Luca Simi", email = "lucasimi90@gmail.com" }]
maintainers = [{ name = "Luca Simi", email = "lucasimi90@gmail.com" }]
license = { file = "LICENSE" } 
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["tda", "mapper", "topology", "topological data analysis"]
dependencies = [
    "matplotlib>=3.3.4",
    "networkx>=2.5",
    "numpy>=1.20.1, <2.0.0",
    "plotly>=4.14.3"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["coverage", "pandas", "scikit-learn"]

[tool.setuptools.package-data]
"tdamapper.utils" = ["_metrics.c", "_metrics.pyx"]

[project.urls]
Homepage = "https://github.com/lucasimi/tda-mapper-python"
Documentation = "https://tda-mapper.readthedocs.io"
Issues = "https://github.com/lucasimi/tda-mapper-python/issues"
