[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tda-mapper"
version = "0.8.0"
description = "A simple and efficient Python implementation of Mapper algorithm for Topological Data Analysis"
readme = "README.md"
authors = [{ name = "Luca Simi", email = "lucasimi90@gmail.com" }]
maintainers = [{ name = "Luca Simi", email = "lucasimi90@gmail.com" }]
license = { file = "LICENSE" } 
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["tda", "mapper", "topology", "topological data analysis"]
dependencies = [
    "matplotlib>=3.3.4",
    "networkx>=2.5",
    "numba>=0.54",
    "numpy>=1.20.1, <2.0.0",
    "plotly>=4.14.3",
    "pyvis>=0.3.2",
    "joblib>=1.4.2",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["coverage[toml]", "pandas", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/lucasimi/tda-mapper-python"
Documentation = "https://tda-mapper.readthedocs.io"
Issues = "https://github.com/lucasimi/tda-mapper-python/issues"

[tool.coverage.run]
omit = [
    "**/_*.py",
    "benchmarks/*.py",
]
