[metadata]
name = mapper
version = 0.0.1
author = Luca Simi
author_email = lucasimi90@gmail.com
description = A simple implementation of the mapper algorithm from TDA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucasimi/mapper-tda
project_urls =
    Bug Tracker = https://github.com/lucasimi/mapper-tda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src