[metadata]
name = mapper
version = 0.0.1
author = Luca Simi
author_email = lucasimi90@gmail.com
description = A simple implementation of the mapper algorithm from TDA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucasimi/tda-mapper-python
project_urls =
    Bug Tracker = https://github.com/lucasimi/tda-mapper-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    matplotlib>=3.3.4
    networkx>=2.5
    numpy>=1.20.1
    scikit-learn>=0.24.1
    plotly>=4.14.3

[options.packages.find]
where = src
